<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email">Enter Email</string>
    <string name="btn_txt_login">LOGIN</string>
    <string name="btn_txt_signup">SUBMIT</string>
    <string name="btn_txt_otp">Request OTP</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_phone">Enter Phone Number</string>
    <string name="google_login">Login With Google</string>
    <string name="google_signup">Signup With Google</string>
    <string name="or">OR</string>
    <string name="no_account">Don\'t Have An Account?</string>
    <string name="already_account">Already Have An Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="hind_name">Enter Name</string>
    <string name="msg_account_create_successful">Account Created Successfully</string>
    <string name="msg_already_email_register">The email address you have entered is already registered</string>
    <string name="action_ok">OK</string>
    <string name="err_invalid_credentials">Invalid Username Or Password</string>
    <string name="stockExchangeScreen">Stock Exchange Screen</string>
    <string name="title_gemini">GEMINI</string>
    <string name="limit">LIMIT</string>
    <string name="market">MARKET</string>
    <string name="pool">POOL</string>
    <string name="info">INFO</string>
    <string name="layerImages">layer images</string>
    <string name="exchange">Exchange</string>
    <string name="date">Jun 8, Thursday 05:30:00 PM</string>
    <string name="you_exchange">YOU EXCHANGE</string>
    <string name="exchange_price">47.38662</string>
    <string name="price">PRICE</string>
    <string name="exchangePriceValue">~$ 6.022.84</string>
    <string name="increaseValue">$0.187200</string>
    <string name="you_receive">YOU RECEIVE</string>
    <string name="receivePrice">1,497.68</string>
    <string name="receivePriceValue">~$ 6.022.84</string>
    <string name="decreaseValue">$127,100880</string>
    <string name="transaction_cost">TRANSACTION COST</string>
    <string name="transactionCostValue">$32.80</string>
    <string name="stockPrice">AVAX 175.21</string>
    <string name="ma_ema_boll">MA / EMA / BOLL</string>
    <string name="exchange_for">EXCHANGE FOR</string>
    <string name="exchangeForValue">1497.68</string>
    <string name="link">LINK</string>
    <string name="exchange_price_increase">Exchange Price Increase</string>
    <string name="exchange_price_decrease">Exchange Price Decrease</string>
    <string name="convert">convert</string>
    <string name="receive_price_increase">Receive Price Increase</string>
    <string name="receive_price_decrease">Receive Price decrease</string>
    <string name="stocks">Stocks</string>
    <string name="intent_demo">Intent Demo</string>
    <string name="user_image_request">Send Your Passport Size Image To Validate Person</string>
    <string name="msg_query_mail">Send Your Query By Mail</string>
    <string name="msg_get_location">Get Our Office Location</string>
    <string name="msg_call_us">Any Query Call Us On: +91 7287038382</string>
    <string name="submit_response">Submit Response</string>
    <string name="hint_enter_query">Enter Your Query Here And Post It…</string>
    <string name="url_office_location">geo:0,0?q=23.0283851,72.4968785(Simform Solutions)</string>
    <string name="err_data_not_handle">There is no app in your system to handle this data</string>
    <string name="mailTo">mailto:</string>
    <string name="email_address">temp@gmail.com</string>
    <string name="title_mail">Query Regarding Employment</string>
    <string name="goto_website">Go To Our Website</string>
    <string name="phone_no">tel:7287038382</string>
    <string name="url_website">https://www.simform.com/</string>
    <string name="response_confirmation_message">You below response is send to company:\n</string>
    <string name="hint_send_message">Enter Your Message Here…</string>
    <string name="data_passing">Data Passing</string>
    <string name="data_pass_intent">Data Pass (INTENT)</string>
    <string name="msg_received">Your Message Is Received: \n</string>
    <string name="data_pass_parcelable">Data Pass (PARCELABLE)</string>
    <string name="data_pass_serializable">Data Pass (SERIALIZABLE)</string>
    <string name="data_pass_contract">Data Pass (CONTRACT)</string>
    <string name="employee_details">Employee Details:</string>
    <string name="project_details">Project Details:</string>
    <string name="send_by_contract">Send Back Result by Contract</string>
    <string name="chat_application">Chat Application</string>
    <string name="call_instruction">To start calling contacts who have ConnectHub, tap + at the bottom of your screen.</string>
    <string name="connectHub">ConnectHub</string>
    <string name="profilePicture">profilePicture</string>
    <string name="enter_message">Enter Message</string>
    <string name="thomas">Thomas</string>
    <string name="message">Message</string>
    <string name="pdfName">CaseStudy.pdf</string>
    <string name="pdfDetail">16 Pages- 30 MB</string>
    <string name="location_limit">Live until 4:17 PM</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="tab_chat">Chats</string>
    <string name="tab_call">Calls</string>
    <string name="audio">Audio</string>
    <string name="docs">docs</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="contact">contact</string>
    <string name="video">Video</string>
    <string name="hello">Hello</string>
    <string name="chat_meeting_time">Please ready for meeting at 9 O\'Clock</string>
    <string name="chat_reponse">Ok i will ready on time.</string>
    <string name="chat_great">Okay Great</string>
</resources>