<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_huge"
    android:padding="@dimen/spacing_huge"
    tools:context=".intent.activity.SenderActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user_response"
        style="@style/Theme.TextInput.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_send_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_user_response"
            style="@style/Theme.EditText.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_text_snippet"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_pass_intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_user_response" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_parcelable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_pass_parcelable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_intent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_serializable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_pass_serializable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_parcelable" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_pass_contract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_serializable" />

</androidx.constraintlayout.widget.ConstraintLayout>