<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_small"
    tools:context=".intent.fragment.CompanyIntroFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        style="@style/Theme.TextInput.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            style="@style/Theme.EditText.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_query"
        style="@style/Theme.TextInput.Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_query"
            style="@style/Theme.EditText.Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_text_snippet"
            android:maxLines="5" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profile"
        android:layout_width="@dimen/imageWidth"
        android:layout_height="@dimen/imageHeight"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_query" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_image_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_query_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_request_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_get_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_go_to_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_call_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_location" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_goto_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_call" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_website" />
</androidx.constraintlayout.widget.ConstraintLayout>