<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.fragment.LoginFragment"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/image_social_media"
        android:layout_margin="@dimen/spacing_tiny"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_banner"
        android:layout_margin="@dimen/spacing_tiny"
        style="@style/Textview.Title"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_phone_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login"
        app:tabBackground="@drawable/tab_selector_bg"
        app:tabTextColor="@color/black"
        app:tabSelectedTextColor="@color/teal_700"
        app:tabIndicator="@null"
        android:background="@color/bright_gray"
        android:layout_margin="@dimen/spacing_tiny"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_phone_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_phone_email"
        app:layout_constraintBottom_toTopOf="@id/text_or"
        android:layout_margin="@dimen/spacing_tiny"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vp_phone_email"
        android:padding="@dimen/spacing_very_small" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_or"
        android:text="@string/google_login"
        android:gravity="center_vertical"
        android:background="@drawable/shape_outline"
        android:drawablePadding="@dimen/spacing_tiny"
        app:drawableStartCompat="@drawable/ic_google"
        android:padding="@dimen/spacing_very_small"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_go_signup"
        app:layout_constraintTop_toBottomOf="@id/text_login_google"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginVertical="@dimen/spacing_very_small"
        android:padding="@dimen/spacing_tiny"
        style="@style/TextView_font_medium"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_go_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_no_account"
        app:layout_constraintTop_toBottomOf="@id/text_login_google"
        android:layout_marginVertical="@dimen/spacing_very_small"
        android:padding="@dimen/spacing_tiny"
        style="@style/TextView_font_medium"/>
</androidx.constraintlayout.widget.ConstraintLayout>