<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpViewModel"
            type="com.example.myapplication.authentication.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.fragment.SignupFragment"
        android:id="@+id/view_main"
        android:padding="@dimen/spacing_tiny">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/image_signup"
            android:layout_margin="@dimen/spacing_tiny" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_banner"
            android:layout_margin="@dimen/spacing_tiny"
            style="@style/Textview.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_signup"
            style="@style/Theme.TextInput.Name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={signUpViewModel.username}"
                style="@style/Theme.EditText.Name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name"
            style="@style/Theme.TextInput.Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={signUpViewModel.email}"
                style="@style/Theme.EditText.Email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email"
            style="@style/Theme.TextInput.Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={signUpViewModel.password}"
                style="@style/Theme.EditText.Password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password"
            android:layout_margin="@dimen/spacing_tiny"
            android:onClick="@{() -> signUpViewModel.registerAccount()}"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/roboto_bold"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_login_google"
            android:padding="@dimen/spacing_very_small" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_no_account"
            android:text="@string/google_signup"
            android:gravity="center_vertical"
            android:background="@drawable/shape_outline"
            android:drawablePadding="@dimen/spacing_tiny"
            app:drawableStartCompat="@drawable/ic_google"
            android:padding="@dimen/spacing_very_small" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_go_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginVertical="@dimen/spacing_very_small"
            android:padding="@dimen/spacing_tiny"
            style="@style/TextView_font_medium" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_go_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_no_account"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="@dimen/spacing_very_small"
            android:padding="@dimen/spacing_tiny"
            style="@style/TextView_font_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>